# sbc_car

./: .gitignore  CMakeLists.txt  README.MD  build.sh
libs/libjsonparse/: CMakeLists.txt  README.md  main.c
libs/libjsonparse/include/: ccan_json.h
libs/libjsonparse_sbc/: CMakeLists.txt  build.sh
libs/libjsonparse_sbc/include/: defs.h
libs/libjsonparse_sbc/src/: ccan_json.c  util.c
src/logger/: CMakeLists.txt  airc_box_data_processor.c  airc_box_data_processor.h  airc_box_data_structure.h  gpscomm.c  main.c  main.h  networking.c  networking.h  reporter.c  reporter.h  sender.c  sender.h  unitserver.c  unitserver.h  xlgyro_data_processor.c  xlgyro_data_processor.h
src/obdlogger-simulator/: CMakeLists.txt  README.md  TODO  build.sh  console_helper.c  console_helper.h  main.c  menu.c  menu.cpp  server.c  server.h  xlgyro_data_helper.c  xlgyro_data_helper.h  xlgyro_data_simulator.c  xlgyro_data_simulator.h
